--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,9 @@
 }
 
 /* */
+* {
+  font-family: "Cormorant SC", serif;
+}
 
 body {
   background-color: #1a1a1b;
@@ -59,26 +62,33 @@ body {
   text-align: center;
   margin: 0;
   padding: 0;
-  font-family: "Cormorant SC", serif;
 }
 
 header {
   height: 15vh;
+  border-bottom: 2px dotted rgb(215, 218, 220);
 }
 
 footer {
   height: 5vh;
   font-size: 18px;
-  margin-top: 25px;
+  border-top: 2px dotted rgb(215, 218, 220);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 footer a {
   text-decoration: none;
   color: rgb(215, 218, 220);
+  display: inline-block;
+  margin: 0 5px;
 }
 
 footer img {
   max-height: 15px;
+  display: inline-block;
+  margin: 0 5px;
 }
 
 h1 {
@@ -93,28 +103,27 @@ h1 {
 }
 
 .arena {
-  height: 20vh;
+  height: 22vh;
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .text {
-  width: 100vw;
   height: 20px;
   font-weight: bold;
   font-size: 20px;
-  text-decoration: underline;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: 1s ease;
-  will-change: opacity;
+  transition: 0.85s ease;
 }
 
 .fade {
-    opacity: 0;
-}   
+  opacity: 0;
+}
 
 .counter {
   display: flex;
@@ -127,8 +136,7 @@ h1 {
   border-radius: 25px;
 }
 
-.cou
-opacity: 0.5;nter p {
+.counter p {
   font-size: 20px;
 }
 
@@ -143,12 +151,12 @@ opacity: 0.5;nter p {
 .winScreen,
 .loseScreen {
   width: 100%;
-  height: 100%;
+  height: 97vh;
   position: absolute;
   z-index: 999;
   display: flex;
   flex-direction: column;
-  background-color: #1a1a1bd9;
+  background-color: #1a1a1bf2;
   font-size: 46px;
   font-weight: bold;
   justify-content: center;
@@ -156,10 +164,9 @@ opacity: 0.5;nter p {
 }
 
 .repeat {
-  width: 175px;
-  height: 75px;
+  width: 150px;
+  height: 50px;
   color: #1a1a1b;
-  font-family: "Cormorant SC", serif;
   font-size: 24px;
   font-weight: bold;
   border-radius: 25px;
